gridworld with two agents

--- a/gridworld.ipynb
+++ b/gridworld.ipynb
@@ -66,9 +66,32 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Episode   State  Action0  Action1  Reward0  Reward1 NextState\n",
+      "0           0  (4, 4)        3        0        0        0    (5, 7)\n",
+      "1           0  (5, 7)        2        1        0        0    (4, 4)\n",
+      "2           0  (4, 4)        1        3        0        0    (1, 5)\n",
+      "3           0  (1, 5)        3        0        0        1    (2, 8)\n",
+      "4           0  (2, 8)        0        1        0        0    (5, 5)\n",
+      "...       ...     ...      ...      ...      ...      ...       ...\n",
+      "7819       99  (5, 3)        1        0        0        0    (2, 6)\n",
+      "7820       99  (2, 6)        0        3        0        0    (5, 7)\n",
+      "7821       99  (5, 7)        1        3        0        1    (2, 8)\n",
+      "7822       99  (2, 8)        0        1        0        0    (5, 5)\n",
+      "7823       99  (5, 5)        0        0        1        1    (8, 8)\n",
+      "\n",
+      "[7824 rows x 7 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "# The gridworld game is a 3x3 board where two agent start from random positions and try to reach their goals\n",
+    "import random\n",
+    "import itertools\n",
+    "import pandas as pd\n",
     "\n",
     "# possible actions\n",
     "ACTION_UP = 0\n",
@@ -81,122 +104,9 @@
     "# each state is a tuple: (agent1's position, agent2's position)\n",
     "WORLD_HEIGHT = 3\n",
     "WORLD_WIDTH = 3\n",
-    "gridIndexList = []\n",
-    "for i in range(0, WORLD_HEIGHT):\n",
-    "    for j in range(0, WORLD_WIDTH):\n",
-    "        gridIndexList.append(WORLD_WIDTH * i + j)\n",
-    "\n",
-    "# valid moves are stored for each position to prevent illegal actions\n",
-    "locationValidActions = {}\n",
-    "for i in gridIndexList:\n",
-    "    locationValidActions[i] = []\n",
-    "\n",
-    "for i in range(0, WORLD_HEIGHT):\n",
-    "    for j in range(0, WORLD_WIDTH):\n",
-    "        gridIndexNumber = WORLD_WIDTH * i + j\n",
-    "        if i != WORLD_HEIGHT - 1:\n",
-    "            locationValidActions[gridIndexNumber].append(ACTION_UP)\n",
-    "        if i != 0:\n",
-    "            locationValidActions[gridIndexNumber].append(ACTION_DOWN)\n",
-    "        if j != 0:\n",
-    "            locationValidActions[gridIndexNumber].append(ACTION_LEFT)\n",
-    "        if j != WORLD_WIDTH - 1:\n",
-    "            locationValidActions[gridIndexNumber].append(ACTION_RIGHT)\n",
-    "\n",
-    "# each agent maintains:\n",
-    "# a Q-table storing joint action values\n",
-    "# a learning rate for updating values\n",
-    "# a policy strategy (not used now)\n",
-    "class agent:\n",
-    "    def __init__(self, agentIndex=0, startLocationIndex=0):\n",
-    "        self.qTable = {}  # Stores Q-values\n",
-    "        self.alpha = {}  # Learning rates\n",
-    "        self.timeNumber = {}  # Number of visits\n",
-    "        self.strategy = {}  # Policy (not used in this experiment)\n",
-    "        self.agentIndex = agentIndex  # Identifies agent 0 or 1\n",
-    "        self.locationIndex = startLocationIndex  # Initial position\n",
-    "\n",
-    "# each agent keeps Q-values for both agents\n",
-    "# joint actions (a1, a2) are stored\n",
-    "def initialSelfQTable(self):\n",
-    "    self.qTable[0] = {}\n",
-    "    self.qTable[1] = {}\n",
-    "    for i in statesAllOne:\n",
-    "        self.qTable[0][i] = {}\n",
-    "        self.qTable[1][i] = {}\n",
-    "        for j_1 in locationValidActions[i[0]]:\n",
-    "            for j_2 in locationValidActions[i[1]]:\n",
-    "                self.qTable[0][i][(j_1, j_2)] = 0\n",
-    "                self.qTable[1][i][(j_1, j_2)] = 0\n",
-    "\n",
-    "# construct payoff matrices for both agents\n",
-    "# use lemke-howson algorithm to compute nash equilibrium\n",
-    "def constructPayoffTable(self, state):\n",
-    "    actions0 = locationValidActions[state[0]]\n",
-    "    actions1 = locationValidActions[state[1]]\n",
-    "    m0 = matrix.Matrix(len(actions0), len(actions1))\n",
-    "    m1 = matrix.Matrix(len(actions0), len(actions1))\n",
-    "    for i in range(len(actions0)):\n",
-    "        for j in range(len(actions1)):\n",
-    "            m0.setItem(i+1, j+1, self.qTable[0][state][(actions0[i], actions1[j])])\n",
-    "            m1.setItem(i+1, j+1, self.qTable[1][state][(actions0[i], actions1[j])])\n",
-    "    return (m0, m1)\n",
-    "\n",
-    "# agents randomly explore actions \n",
-    "# nash Q-learning updates are applied\n",
-    "def playGameOne(agent_0 = agent, agent_1 = agent):\n",
-    "    gamma = 0.9\n",
-    "    agent_0.initialSelfQTable()\n",
-    "    agent_1.initialSelfQTable()\n",
-    "    agent_0.initialSelfAlpha()\n",
-    "    agent_1.initialSelfAlpha()\n",
-    "    while episodes < 100:\n",
-    "        while True:\n",
-    "            agent0Action = agent_0.chooseActionRandomly(currentState)\n",
-    "            agent1Action = agent_1.chooseActionRandomly(currentState)\n",
-    "            reward_0, reward_1, nextState, endGameFlag = gridGameOne(agent0Action, agent1Action, currentState)\n",
-    "            agent_0.nashQLearning(gamma, agent0Action, reward_0, currentState, nextState, agent1Action, reward_1)\n",
-    "            agent_1.nashQLearning(gamma, agent0Action, reward_0, currentState, nextState, agent1Action, reward_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'ace_tools'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mitertools\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mace_tools\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtools\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# Define constants for actions\u001b[39;00m\n\u001b[1;32m      8\u001b[0m ACTION_UP \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ace_tools'"
-     ]
-    }
-   ],
-   "source": [
-    "# Re-import necessary libraries after execution state reset\n",
-    "import random\n",
-    "import itertools\n",
-    "import pandas as pd\n",
-    "import ace_tools as tools\n",
-    "\n",
-    "# Define constants for actions\n",
-    "ACTION_UP = 0\n",
-    "ACTION_DOWN = 1\n",
-    "ACTION_LEFT = 2\n",
-    "ACTION_RIGHT = 3\n",
-    "\n",
-    "# Define world size\n",
-    "WORLD_HEIGHT = 3\n",
-    "WORLD_WIDTH = 3\n",
-    "\n",
-    "# Generate grid indices\n",
     "gridIndexList = [WORLD_WIDTH * i + j for i in range(WORLD_HEIGHT) for j in range(WORLD_WIDTH)]\n",
     "\n",
-    "# Define valid actions for each position\n",
+    "# valid moves are stored for each position to prevent illegal actions\n",
     "locationValidActions = {i: [] for i in gridIndexList}\n",
     "for i in range(WORLD_HEIGHT):\n",
     "    for j in range(WORLD_WIDTH):\n",
@@ -213,7 +123,10 @@
     "# Define all possible states as (agent1_position, agent2_position)\n",
     "statesAllOne = list(itertools.product(gridIndexList, repeat=2))\n",
     "\n",
-    "# Agent class with learning capabilities\n",
+    "# each agent maintains:\n",
+    "# a Q-table storing joint action values\n",
+    "# a learning rate for updating values\n",
+    "# a policy strategy (not used now)\n",
     "class Agent:\n",
     "    def __init__(self, agentIndex=0, startLocationIndex=0):\n",
     "        self.qTable = {}  # Stores Q-values\n",
@@ -238,7 +151,7 @@
     "    def initialSelfAlpha(self):\n",
     "        \"\"\" Initialize learning rates \"\"\"\n",
     "        for state in statesAllOne:\n",
-    "            self.alpha[state] = 1.0  # Set initial learning rate\n",
+    "            self.alpha[state] = 1.0  # initial learning rate\n",
     "\n",
     "    def chooseActionRandomly(self, currentState):\n",
     "        \"\"\" Choose a random valid action \"\"\"\n",
@@ -285,11 +198,12 @@
     "    reward_0 = 1 if agent0_new == 8 else 0  # Reward if agent 0 reaches bottom-right\n",
     "    reward_1 = 1 if agent1_new == 8 else 0  # Reward if agent 1 reaches bottom-right\n",
     "\n",
-    "    endGameFlag = agent0_new == 8 and agent1_new == 8  # Game ends if both reach the goal\n",
+    "    endGameFlag = agent0_new == 8 and agent1_new == 8  # game ends if both reach the goal\n",
     "\n",
     "    return reward_0, reward_1, nextState, endGameFlag\n",
     "\n",
-    "# Main training loop\n",
+    "# agents randomly explore actions \n",
+    "# nash Q-learning updates are applied\n",
     "def playGameOne():\n",
     "    \"\"\" Runs the game loop for Nash Q-learning \"\"\"\n",
     "    gamma = 0.9\n",
@@ -302,7 +216,7 @@
     "    agent_1.initialSelfAlpha()\n",
     "\n",
     "    episodes = 0\n",
-    "    history = []  # Store history for visualization\n",
+    "    history = []  # store history for visualization\n",
     "\n",
     "    while episodes < 100:\n",
     "        currentState = (agent_0.locationIndex, agent_1.locationIndex)\n",
@@ -324,12 +238,26 @@
     "\n",
     "        episodes += 1\n",
     "\n",
-    "    # Convert history to DataFrame for analysis\n",
     "    df_history = pd.DataFrame(history, columns=['Episode', 'State', 'Action0', 'Action1', 'Reward0', 'Reward1', 'NextState'])\n",
-    "    tools.display_dataframe_to_user(name=\"Game History\", dataframe=df_history)\n",
+    "    print(df_history) \n",
+    "    #df_history.to_csv(\"game_history.csv\") \n",
     "\n",
-    "# Run the simulation\n",
     "playGameOne()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To do:\n",
+    "\n",
+    "I have applied standard Q-Learning instead of Nash Q-learning --> Study the lemke-Howson algorithm and fix code (Instead of max(Q), use a Nash solver to find the equilibrium Q-values at nextState)\n",
+    "\n",
+    "I keep alpha constant. This can prevent convergence. In Nash Q-learning, the learning rate decreases over time ($\n",
+    "\\alpha(s, a_0, a_1) = \\frac{1}{N(s, a_0, a_1)}\n",
+    "$) \n",
+    "\n",
+    "My agent policies are purely random (should I use an epsilon greedy policy?)"
    ]
   },
   {
