--- a/gridworld_qlearning.ipynb
+++ b/gridworld_qlearning.ipynb
@@ -89,9 +89,9 @@
     }
    ],
    "source": [
-    "import random\n",
-    "import itertools\n",
-    "import pandas as pd\n",
+    "import random    \n",
+    "import itertools        # to generate all possible state pairs\n",
+    "import pandas as pd \n",
     "\n",
     "# possible actions\n",
     "ACTION_UP = 0\n",
@@ -104,7 +104,7 @@
     "# each state is a tuple: (agent1's position, agent2's position)\n",
     "WORLD_HEIGHT = 3\n",
     "WORLD_WIDTH = 3\n",
-    "gridIndexList = [WORLD_WIDTH * i + j for i in range(WORLD_HEIGHT) for j in range(WORLD_WIDTH)]\n",
+    "gridIndexList = [WORLD_WIDTH * i + j for i in range(WORLD_HEIGHT) for j in range(WORLD_WIDTH)] # all possible grid positions\n",
     "\n",
     "# valid moves are stored for each position to prevent illegal actions\n",
     "locationValidActions = {i: [] for i in gridIndexList}\n",
