Update env description

--- a/Nash-Q-Learning.ipynb
+++ b/Nash-Q-Learning.ipynb
@@ -61,11 +61,11 @@
     "We'll create a custom 2-agent grid world using Gymnasium.\n",
     "Key Features:\n",
     "\n",
-    "Grid size: 5x5\n",
+    "Grid size: 3x3\n",
     "\n",
-    "Agents start at random positions.\n",
+    "Agents both start at (1,1).\n",
     "\n",
-    "Goals: Fixed positions (e.g., opposite corners).\n",
+    "Goals: Fixed positions (0,0) for agent 1, and (2,2) for agent 2.\n",
     "\n",
     "Actions: [UP, DOWN, LEFT, RIGHT] (4 actions per agent).\n",
     "\n",
