multi-agent gridworld

--- a/gridworld_qlearning.ipynb
+++ b/gridworld_qlearning.ipynb
@@ -112,16 +112,16 @@
     "    for j in range(WORLD_WIDTH):\n",
     "        gridIndexNumber = WORLD_WIDTH * i + j\n",
     "        if i != WORLD_HEIGHT - 1:\n",
-    "            locationValidActions[gridIndexNumber].append(ACTION_UP)\n",
+    "            locationValidActions[gridIndexNumber].append(ACTION_UP) # if not on the last row, UP is allowed \n",
     "        if i != 0:\n",
-    "            locationValidActions[gridIndexNumber].append(ACTION_DOWN)\n",
+    "            locationValidActions[gridIndexNumber].append(ACTION_DOWN) # if not on the first row DOWN is allowed\n",
     "        if j != 0:\n",
-    "            locationValidActions[gridIndexNumber].append(ACTION_LEFT)\n",
+    "            locationValidActions[gridIndexNumber].append(ACTION_LEFT) # if not on the first column LEFT is allowed\n",
     "        if j != WORLD_WIDTH - 1:\n",
-    "            locationValidActions[gridIndexNumber].append(ACTION_RIGHT)\n",
+    "            locationValidActions[gridIndexNumber].append(ACTION_RIGHT) # if not on the last colum RIGHT is allowed\n",
     "\n",
-    "# Define all possible states as (agent1_position, agent2_position)\n",
-    "statesAllOne = list(itertools.product(gridIndexList, repeat=2))\n",
+    "# Define all possible state pairs as (agent0_position, agent1_position)\n",
+    "statesAllOne = list(itertools.product(gridIndexList, repeat=2)) # 9x9=81 total number of states\n",
     "\n",
     "# each agent maintains:\n",
     "# a Q-table storing joint action values\n",
@@ -129,15 +129,15 @@
     "# a policy strategy (not used now)\n",
     "class Agent:\n",
     "    def __init__(self, agentIndex=0, startLocationIndex=0):\n",
-    "        self.qTable = {}  # Stores Q-values\n",
-    "        self.alpha = {}  # Learning rates\n",
+    "        self.qTable = {}  # a Q-table storing joint action values\n",
+    "        self.alpha = {}  # learning rate\n",
     "        self.timeNumber = {}  # Number of visits\n",
-    "        self.strategy = {}  # Policy (not used in this experiment)\n",
-    "        self.agentIndex = agentIndex  # Identifies agent 0 or 1\n",
-    "        self.locationIndex = startLocationIndex  # Initial position\n",
+    "        self.strategy = {}  # policy strategy\n",
+    "        self.agentIndex = agentIndex  # index to identify agent 0 or 1\n",
+    "        self.locationIndex = startLocationIndex  # initial positiom\n",
     "\n",
+    "    # each state-action pair starts with a Q-value of 0\n",
     "    def initialSelfQTable(self):\n",
-    "        \"\"\" Initialize Q-table with zero values for all state-action pairs \"\"\"\n",
     "        self.qTable[0] = {}\n",
     "        self.qTable[1] = {}\n",
     "        for state in statesAllOne:\n",
@@ -148,15 +148,17 @@
     "                    self.qTable[0][state][(action1, action2)] = 0\n",
     "                    self.qTable[1][state][(action1, action2)] = 0\n",
     "\n",
+    "    # initialize learning rates\n",
     "    def initialSelfAlpha(self):\n",
     "        \"\"\" Initialize learning rates \"\"\"\n",
     "        for state in statesAllOne:\n",
     "            self.alpha[state] = 1.0  # initial learning rate\n",
     "\n",
+    "    # the agent selects a random valid action from locationValidActions\n",
     "    def chooseActionRandomly(self, currentState):\n",
-    "        \"\"\" Choose a random valid action \"\"\"\n",
     "        return random.choice(locationValidActions[currentState[self.agentIndex]])\n",
     "\n",
+    "    # Q-update NOT FULLY NASH Q-LEARNING YET!!!\n",
     "    def nashQLearning(self, gamma, action0, reward0, currentState, nextState, action1, reward1):\n",
     "        \"\"\" Update Q-table using Nash Q-learning (simplified update) \"\"\"\n",
     "        alpha = self.alpha[currentState]\n",
@@ -168,8 +170,10 @@
     "        )\n",
     "\n",
     "# Game environment\n",
+    "# simulate one step in the grid\n",
+    "# agents move based on their actions, and the reward system\n",
+    "# +1 reward if agent reaches 8\n",
     "def gridGameOne(action0, action1, currentState):\n",
-    "    \"\"\" Simulates one step in the grid game \"\"\"\n",
     "    agent0_new = currentState[0]\n",
     "    agent1_new = currentState[1]\n",
     "\n",
@@ -202,8 +206,9 @@
     "\n",
     "    return reward_0, reward_1, nextState, endGameFlag\n",
     "\n",
-    "# agents randomly explore actions \n",
-    "# nash Q-learning updates are applied\n",
+    "# run 100 episodes of training\n",
+    "# random actions are chosen\n",
+    "# Q-learning updates are applied\n",
     "def playGameOne():\n",
     "    \"\"\" Runs the game loop for Nash Q-learning \"\"\"\n",
     "    gamma = 0.9\n",
@@ -257,7 +262,7 @@
     "\\alpha(s, a_0, a_1) = \\frac{1}{N(s, a_0, a_1)}\n",
     "$) \n",
     "\n",
-    "My agent policies are purely random (should I use an epsilon greedy policy?)"
+    "My agent policies are purely random"
    ]
   },
   {
