--- a/GAIL.ipynb
+++ b/GAIL.ipynb
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,6 +300,8 @@
     "        # Here we flip the sign cuz we wanna minimizing\n",
     "        # We wanna maximizing/reinforce the action with high reward, that equals to minimizing the negative reward\n",
     "        # The entropy is positive, thus minimizing the negative entropy is maximizing the entropy\n",
+    "\n",
+    "        # Policy gradient reinforced by direct rewards Q(s,a), using descriminator as reward signal\n",
     "        policy_loss = -(log_probs * rewards).mean() - λ * entropy\n",
     "        \n",
     "        # Update policy\n",
