--- a/MAGAIL.ipynb
+++ b/MAGAIL.ipynb
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,11 +585,17 @@
     "            # It seems to be: D(s,a) How much u think it is from the expert, so we wanna maximize this reward\n",
     "            # In paper it can be -log(D(s,a)) which outputs the probability that (s,a) from the policy\n",
     "            with torch.no_grad():\n",
+    "\n",
+    "                # MAGAIL paper section 4.1 \n",
+    "                # Implicitly, Di - discriminators plays the role of a reward function for the generator, \n",
+    "                # which in turn attempts to train the agent to maximize its reward thus fooling the discriminator\n",
     "                rewards = torch.log(discriminators[agent](states, actions_onehot))\n",
     "\n",
     "                # Compute value baseline\n",
     "                values = value_nets[agent](states)\n",
-    "                # Compute advantages (reward-to-go - baseline)\n",
+    "                # Compute advantages \n",
+    "                # TD error: (actual reward - estimate(baseline))\n",
+    "                # Then use this advantage as reward/reinforce signal\n",
     "                advantages = rewards - values.squeeze()\n",
     "\n",
     "            # Update value network (MSE Loss)\n",
@@ -605,6 +611,7 @@
     "            log_probs = torch.log(action_probs.gather(1, actions.unsqueeze(1)))\n",
     "\n",
     "            # If we didn't call advantage.detach(), the gradients would flow through the advantage tensor, and the value network's parameters would be updated using the policy loss, which is not what we want.\n",
+    "            # Policy gradient reinforced by advantage\n",
     "            policy_loss = -(log_probs * advantages.detach()).mean()\n",
     "            \n",
     "            optimizers[agent][\"policy\"].zero_grad()\n",
