Update comments to confirm

--- a/MAGAIL.ipynb
+++ b/MAGAIL.ipynb
@@ -612,6 +612,7 @@
     "\n",
     "            # If we didn't call advantage.detach(), the gradients would flow through the advantage tensor, and the value network's parameters would be updated using the policy loss, which is not what we want.\n",
     "            # Policy gradient reinforced by advantage\n",
+    "            # Are we actually using a TRPO/PPO/nature policy gradient? In paper it mentioned\n",
     "            policy_loss = -(log_probs * advantages.detach()).mean()\n",
     "            \n",
     "            optimizers[agent][\"policy\"].zero_grad()\n",
