--- a/MAGAIL.ipynb
+++ b/MAGAIL.ipynb
@@ -606,6 +606,9 @@
     "            value_loss.backward()\n",
     "            optimizers[agent][\"value\"].step()\n",
     "\n",
+    "            ## TODO why we don't clear the gradients ??\n",
+    "            #optimizers[agent][\"value\"].zero_grad()\n",
+    "\n",
     "            # Policy gradient\n",
     "            action_probs = policies[agent](states)\n",
     "            log_probs = torch.log(action_probs.gather(1, actions.unsqueeze(1)))\n",
