--- a/MAGAIL.ipynb
+++ b/MAGAIL.ipynb
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,6 +423,7 @@
     "        return self.net(x)\n",
     "\n",
     "# Discriminator Networks (one per agent)\n",
+    "# Output the probability of (s,a) Coming from the EXPERT\n",
     "class Discriminator(nn.Module):\n",
     "    def __init__(self, obs_dim, act_dim, hidden_dim=64):\n",
     "        super().__init__()\n",
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,8 +575,7 @@
     "    policy_actions_onehot = torch.nn.functional.one_hot(policy_actions, num_classes=num_classes).float().to(device)\n",
     "\n",
     "    # Adversarial reward: log(D(s,a))\n",
-    "    # It seems to be: D(s,a) How much u think it is from the expert, so we wanna maximize this reward\n",
-    "    # In paper it can be -log(D(s,a)) which outputs the probability that (s,a) from the policy\n",
+    "    # D(s,a) How much the descrimiator think it is from the expert, and we wanna maximize this reward\n",
     "    with torch.no_grad():\n",
     "\n",
     "        # MAGAIL paper section 4.1 \n",
@@ -592,14 +592,10 @@
     "\n",
     "    # Update value network (MSE Loss)\n",
     "    value_loss = (values.squeeze() - generator_rewards).pow(2).mean()\n",
-    "    # Clear the gradient\n",
+    "    # Should always clear the gradient before update\n",
     "    optimizers[agent][\"value\"].zero_grad()\n",
-    "    value_loss.requires_grad = True\n",
     "    value_loss.backward()\n",
     "    optimizers[agent][\"value\"].step()\n",
-    "\n",
-    "    ## TODO why we don't clear the gradients ??\n",
-    "    #optimizers[agent][\"value\"].zero_grad()\n",
     "\n",
     "    # Policy gradient\n",
     "    action_probs = policies[agent](policy_states)\n",
@@ -611,7 +607,7 @@
     "\n",
     "    # If we didn't call advantage.detach(), the gradients would flow through the advantage tensor, and the value network's parameters would be updated using the policy loss, which is not what we want.\n",
     "    # Policy gradient reinforced by advantage\n",
-    "    # Are we actually using a TRPO/PPO/nature policy gradient? In paper it mentioned\n",
+    "    # TODO we are not using any nature policy gradient TRPO/PPO, but in paper it used\n",
     "    policy_loss = -(log_probs * advantages.detach()).mean()\n",
     "    \n",
     "    optimizers[agent][\"policy\"].zero_grad()\n",
@@ -722,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -748,13 +744,13 @@
     "\n",
     "# Create the plot\n",
     "plt.figure(figsize=(20, 6))\n",
-    "plt.plot(epochs, all_episode_rewards, label='Episode Rewards', marker='o', color='blue')\n",
-    "plt.plot(epochs, all_expert_rewards, label='Expert Rewards', marker='x', color='red')\n",
+    "plt.plot(epochs, all_episode_rewards, label='Policy', marker='o', color='blue')\n",
+    "plt.plot(epochs, all_expert_rewards, label='Expert', marker='x', color='red')\n",
     "\n",
     "# Customize the plot\n",
     "plt.xlabel('Epochs')\n",
     "plt.ylabel('Average Reward')\n",
-    "plt.title('MAGAIL: Episode vs Expert Rewards (Evaluated Every 50 Epochs)')\n",
+    "plt.title('MAGAIL: Learnt Policy vs Expert Rewards (Evaluated Every 50 Epochs)')\n",
     "plt.grid(True, linestyle='--', alpha=0.7)\n",
     "plt.legend()\n",
     "plt.xticks(epochs)  # Show epoch numbers on x-axis\n",
