--- a/Nash-Q-Learning.ipynb
+++ b/Nash-Q-Learning.ipynb
@@ -63,9 +63,9 @@
     "\n",
     "Grid size: 3x3\n",
     "\n",
-    "Agents both start at (1,1).\n",
+    "Agents both starts at (2, 0), (2, 2) respectively.\n",
     "\n",
-    "Goals: Fixed positions (0,0) for agent 1, and (2,2) for agent 2.\n",
+    "Goals: Fixed positions (0,2) for agent 1, and (0,0) for agent 2.\n",
     "\n",
     "Actions: [UP, DOWN, LEFT, RIGHT] (4 actions per agent).\n",
     "\n",
@@ -73,7 +73,7 @@
     "\n",
     "Rewards:\n",
     "\n",
-    "+10 for reaching the goal.\n",
+    "+100 for reaching the goal.\n",
     "\n",
     "-1 for collisions (if both agents choose the same cell).\n",
     "\n",
