Added num_expert_episodes parameter

--- a/MAGAIL.ipynb
+++ b/MAGAIL.ipynb
@@ -44,17 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "\n",
+    "num_expert_episodes = 50\n",
     "# Agent dimensions\n",
     "speaker_obs_dim = 3     #[goal_id]\n",
     "listener_obs_dim = 11 #[self_vel, all_landmark_rel_positions, communication]\n",
     "\n",
-    "speaker_act_dim = 3 # [say_0, say_1, say_2, say_3, say_4, say_5, say_6, say_7, say_8, say_9]\n",
+    "speaker_act_dim = 3 \n",
     "listener_act_dim = 5 # [no_action, move_left, move_right, move_down, move_up]\n",
     "\n",
     "# Two layers network, applied for discriminator, policy and value network\n",
@@ -174,12 +175,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate data\n",
-    "expert_data = generate_expert_data(num_episodes=50)"
+    "expert_data = generate_expert_data(num_episodes=num_expert_episodes)"
    ]
   },
   {
