Fixed no grad issue

--- a/MAGAIL.ipynb
+++ b/MAGAIL.ipynb
@@ -594,6 +594,7 @@
     "    # Update value network (MSE Loss)\n",
     "    value_loss = (values.squeeze() - generator_rewards).pow(2).mean()\n",
     "    # Should always clear the gradient before update\n",
+    "    value_loss.requires_grad = True\n",
     "    optimizers[agent][\"value\"].zero_grad()\n",
     "    value_loss.backward()\n",
     "    optimizers[agent][\"value\"].step()\n",
