Mixed strategy env

--- a/MAGAIL.ipynb
+++ b/MAGAIL.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
     "        new_pos1 = self._move(self.agent1_pos, actions[0])\n",
     "        new_pos2 = self._move(self.agent2_pos, actions[1])\n",
     "\n",
-    "        # using (x1, y2)\n",
+    "        # Reward using (x1, y2)\n",
     "        x1, _ = new_pos1\n",
     "        _, y2 = new_pos2\n",
     "        reward1 = self.a1_rewards[x1][y2]\n",
