add SingleAgentExpertDataset and DataLoaders for each agent

--- a/BC.ipynb
+++ b/BC.ipynb
@@ -79,8 +79,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "70549eb8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adversary_0 batch shapes → states: torch.Size([64, 8]), actions: torch.Size([64])\n",
+      "agent_0 batch shapes → states: torch.Size([64, 19]), actions: torch.Size([64])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SingleAgentExpertDataset + DataLoaders\n",
+    "class SingleAgentExpertDataset(Dataset):\n",
+    "    def __init__(self, states, actions):\n",
+    "        # Convert lists of numpy arrays into torch tensors\n",
+    "        self.states  = torch.from_numpy(np.array(states)).float()\n",
+    "        self.actions = torch.from_numpy(np.array(actions)).long()\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.states)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.states[idx], self.actions[idx]\n",
+    "\n",
+    "# Instantiate datasets and loaders\n",
+    "datasets = {}\n",
+    "loaders  = {}\n",
+    "\n",
+    "for agent, data in expert_data.items():\n",
+    "    ds     = SingleAgentExpertDataset(data[\"states\"], data[\"actions\"])\n",
+    "    loader = DataLoader(ds, batch_size=batch_size, shuffle=True)\n",
+    "    datasets[agent] = ds\n",
+    "    loaders[agent]  = loader\n",
+    "\n",
+    "    # Print a batch shape for sanity\n",
+    "    s_batch, a_batch = next(iter(loader))\n",
+    "    print(f\"{agent} batch shapes → states: {s_batch.shape}, actions: {a_batch.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34fcfc17",
    "metadata": {},
    "outputs": [],
    "source": []
