--- a/BC.ipynb
+++ b/BC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "116382bd",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "dca6f47a",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "70549eb8",
    "metadata": {},
    "outputs": [
@@ -123,8 +123,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "34fcfc17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "adversary_0 policy → obs_dim: 8, act_dim: 5\n",
+      "BCPolicy(\n",
+      "  (net): Sequential(\n",
+      "    (0): Linear(in_features=8, out_features=64, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=64, out_features=64, bias=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Linear(in_features=64, out_features=5, bias=True)\n",
+      "  )\n",
+      ")\n",
+      "agent_0 policy → obs_dim: 19, act_dim: 5\n",
+      "BCPolicy(\n",
+      "  (net): Sequential(\n",
+      "    (0): Linear(in_features=19, out_features=64, bias=True)\n",
+      "    (1): ReLU()\n",
+      "    (2): Linear(in_features=64, out_features=64, bias=True)\n",
+      "    (3): ReLU()\n",
+      "    (4): Linear(in_features=64, out_features=5, bias=True)\n",
+      "  )\n",
+      ")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Behavior Cloning policy network definition\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class BCPolicy(nn.Module):\n",
+    "    def __init__(self, obs_dim, act_dim, hidden_dim=64):\n",
+    "        super().__init__()\n",
+    "        self.net = nn.Sequential(\n",
+    "            nn.Linear(obs_dim, hidden_dim),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(hidden_dim, hidden_dim),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(hidden_dim, act_dim)\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        return self.net(x)\n",
+    "\n",
+    "# Instantiate one BCPolicy per agent\n",
+    "policies = {}\n",
+    "for agent, ds in datasets.items():\n",
+    "    obs_dim = ds.states.shape[1]\n",
+    "    # assume actions are 0...act_dim-1\n",
+    "    act_dim = int(ds.actions.max().item()) + 1\n",
+    "    policy = BCPolicy(obs_dim, act_dim, hidden_dim).to(device)\n",
+    "    policies[agent] = policy\n",
+    "    print(f\"{agent} policy → obs_dim: {obs_dim}, act_dim: {act_dim}\")\n",
+    "    print(policy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32abc797",
    "metadata": {},
    "outputs": [],
    "source": []
