--- a/BC.ipynb
+++ b/BC.ipynb
@@ -186,8 +186,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "32abc797",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Training BC policy for adversary_0 ===\n",
+      "adversary_0  Epoch  1/50: loss = 1.5538\n",
+      "adversary_0  Epoch 10/50: loss = 0.9664\n",
+      "adversary_0  Epoch 20/50: loss = 0.7443\n",
+      "adversary_0  Epoch 30/50: loss = 0.6510\n",
+      "adversary_0  Epoch 40/50: loss = 0.5854\n",
+      "adversary_0  Epoch 50/50: loss = 0.5306\n",
+      "\n",
+      "=== Training BC policy for agent_0 ===\n",
+      "agent_0  Epoch  1/50: loss = 1.5785\n",
+      "agent_0  Epoch 10/50: loss = 1.0333\n",
+      "agent_0  Epoch 20/50: loss = 0.6059\n",
+      "agent_0  Epoch 30/50: loss = 0.4161\n",
+      "agent_0  Epoch 40/50: loss = 0.3247\n",
+      "agent_0  Epoch 50/50: loss = 0.2687\n"
+     ]
+    }
+   ],
+   "source": [
+    "# train each agent’s BCPolicy via supervised learning\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "# Set up optimizers and loss\n",
+    "optimizers = {\n",
+    "    agent: torch.optim.Adam(policy.parameters(), lr=lr)\n",
+    "    for agent, policy in policies.items()\n",
+    "}\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "\n",
+    "# Training loop\n",
+    "for agent in policies:\n",
+    "    print(f\"\\n=== Training BC policy for {agent} ===\")\n",
+    "    policy    = policies[agent]\n",
+    "    optimizer = optimizers[agent]\n",
+    "    loader    = loaders[agent]\n",
+    "    \n",
+    "    for epoch in range(1, epochs+1):\n",
+    "        total_loss = 0.0\n",
+    "        for states, actions in loader:\n",
+    "            states, actions = states.to(device), actions.to(device)\n",
+    "            logits = policy(states)\n",
+    "            loss   = loss_fn(logits, actions)\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            total_loss += loss.item()\n",
+    "        avg_loss = total_loss / len(loader)\n",
+    "        # Print every 10 epochs (and first epoch)\n",
+    "        if epoch == 1 or epoch % 10 == 0:\n",
+    "            print(f\"{agent}  Epoch {epoch:>2}/{epochs}: loss = {avg_loss:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecf9df8e",
    "metadata": {},
    "outputs": [],
    "source": []
