Added different expert policy sampling

--- a/Entropy_test/Entropy_test.ipynb
+++ b/Entropy_test/Entropy_test.ipynb
@@ -948,7 +948,98 @@
     "\n",
     "# Plot results\n",
     "print(\"\\nGenerating plots...\")\n",
-    "plot_results(results, analysis)"
+    "plot_results(results, analysis)def analyze_individual_coordination(results):\n",
+    "    for beta in results.keys():\n",
+    "        print(f\"\\n=== Individual Run Analysis for β = {beta} ===\")\n",
+    "        for seed in results[beta].keys():\n",
+    "            joint_dist = results[beta][seed][\"history\"][\"joint_action_dist\"][-1]\n",
+    "            coordination_bias = max(joint_dist[0], joint_dist[3])  # Max of (A,A) or (B,B)\n",
+    "            print(f\"Seed {seed}: Coordination bias = {coordination_bias:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "93929b38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== Individual Run Analysis for β = 0.0 ===\n",
+      "Seed 42: Coordination bias = 0.257\n",
+      "Seed 123: Coordination bias = 0.269\n",
+      "Seed 456: Coordination bias = 0.269\n",
+      "Seed 789: Coordination bias = 0.348\n",
+      "Seed 999: Coordination bias = 0.250\n",
+      "\n",
+      "=== Individual Run Analysis for β = 0.1 ===\n",
+      "Seed 42: Coordination bias = 0.255\n",
+      "Seed 123: Coordination bias = 0.283\n",
+      "Seed 456: Coordination bias = 0.256\n",
+      "Seed 789: Coordination bias = 0.306\n",
+      "Seed 999: Coordination bias = 0.252\n",
+      "\n",
+      "=== Individual Run Analysis for β = 0.5 ===\n",
+      "Seed 42: Coordination bias = 0.265\n",
+      "Seed 123: Coordination bias = 0.257\n",
+      "Seed 456: Coordination bias = 0.252\n",
+      "Seed 789: Coordination bias = 0.251\n",
+      "Seed 999: Coordination bias = 0.261\n",
+      "\n",
+      "=== Individual Run Analysis for β = 1.0 ===\n",
+      "Seed 42: Coordination bias = 0.265\n",
+      "Seed 123: Coordination bias = 0.255\n",
+      "Seed 456: Coordination bias = 0.251\n",
+      "Seed 789: Coordination bias = 0.251\n",
+      "Seed 999: Coordination bias = 0.256\n"
+     ]
+    }
+   ],
+   "source": [
+    "def analyze_individual_coordination(results):\n",
+    "    for beta in results.keys():\n",
+    "        print(f\"\\n=== Individual Run Analysis for β = {beta} ===\")\n",
+    "        for seed in results[beta].keys():\n",
+    "            joint_dist = results[beta][seed][\"history\"][\"joint_action_dist\"][-1]\n",
+    "            coordination_bias = max(joint_dist[0], joint_dist[3])  # Max of (A,A) or (B,B)\n",
+    "            print(f\"Seed {seed}: Coordination bias = {coordination_bias:.3f}\")\n",
+    "analyze_individual_coordination(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "910b7586",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "β=0.0: Mean coordination = 0.503, Std = 0.006\n",
+      "β=0.1: Mean coordination = 0.501, Std = 0.002\n",
+      "β=0.5: Mean coordination = 0.500, Std = 0.000\n",
+      "β=1.0: Mean coordination = 0.500, Std = 0.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "def coordination_consistency(results):\n",
+    "    for beta in results.keys():\n",
+    "        coord_biases = []\n",
+    "        for seed in results[beta].keys():\n",
+    "            joint_dist = results[beta][seed][\"history\"][\"joint_action_dist\"][-1]\n",
+    "            # How much does this run favor coordination vs. anti-coordination?\n",
+    "            coord_prob = joint_dist[0] + joint_dist[3]  # (A,A) + (B,B)\n",
+    "            coord_biases.append(coord_prob)\n",
+    "        \n",
+    "        print(f\"β={beta}: Mean coordination = {np.mean(coord_biases):.3f}, \"\n",
+    "              f\"Std = {np.std(coord_biases):.3f}\")\n",
+    "        \n",
+    "coordination_consistency(results)"
    ]
   }
  ],
